--- a/doc/dissertation/content/low_order/positivity_preservation.tex
+++ b/doc/dissertation/content/low_order/positivity_preservation.tex
@@ -62,7 +62,7 @@ vector $\mathbf{y}$ of this system has the entries
     = \dt\ssrhsletter^n_i
       + \pr{\lumpedmassentry - \dt\ssmatrixletter^{L,n}_{i,i}}
         \solutionletter^n_i
-      - \dt\sumjnoti\ssmatrixletter^{L,n}\solutionletter^n_j
+      - \dt\sumjnoti\ssmatrixletter^{L,n}\ij\solutionletter^n_j
   \eqp
 \]
 It now just remains to prove that these entries are non-negative.
@@ -111,7 +111,7 @@ The right-hand-side vector $\mathbf{y}$ of this system has the entries
     = \dt\pr{(1-\theta)\ssrhsletter^n_i + \theta\ssrhsletter^{n+1}_i}
       + \pr{\lumpedmassentry - (1-\theta)\dt\ssmatrixletter^{L,n}_{i,i}}
         \solutionletter^n_i
-      - (1-\theta)\dt\sumjnoti\ssmatrixletter^{L,n}\solutionletter^n_j
+      - (1-\theta)\dt\sumjnoti\ssmatrixletter^{L,n}\ij\solutionletter^n_j
   \eqp
 \]
 It now just remains to prove that these entries are non-negative.
