--- a/doc/paper/content/introduction.tex
+++ b/doc/paper/content/introduction.tex
@@ -45,8 +45,8 @@ later extended to DGFEM as well \cite{zingan_2013}.
 
 One of the main objectives of this paper is to present a method that precludes
 the formation of spurious oscillations and the negativities that result from
-these oscillations. The occurrence of negativities in the numerical solution of
-the transport equation has been a long-standing issue \cite{lanthrop}.
+these oscillations; these issues have been a long-standing issue in the
+numerical solution of the transport equation \cite{lanthrop}.
 Not only are these negativities physically inaccurate, but they can cause
 simulations to terminate prematurely. Many attempts to remedy this
 issue rely on ad-hoc fix-ups, such as the set-to-zero fix-up for the
