--- a/doc/paper/references.bib
+++ b/doc/paper/references.bib
@@ -458,3 +458,14 @@
   year = {1975},
   pages = {903--910}
 }
+
+@article{plemmons,
+  author = {R. J. Plemmins},
+  year = {1977},
+  title = {M-Matrix Characterizations I. -- Nonsingular M-Matrices},
+  journal = {Linear Algebra and its Applications},
+  volume = {18},
+  number = {2},
+  pages = {175--188},
+  doi = {10.1016/0024-3795(77)90073-8}
+}
