--- a/doc/paper/shortcuts.tex
+++ b/doc/paper/shortcuts.tex
@@ -40,6 +40,7 @@
 
 % integrals and sums
 \newcommand{\sumj}{\sum\limits_j}
+\newcommand{\sumjnoti}{\sum\limits_{j\ne i}}
 \newcommand{\sumKSij}[1][K]{\sum\limits_{#1\in\mathcal{K}(S_{i,j})}}
 \newcommand{\intSi}{\int\limits_{S_i}}
 \newcommand{\intSij}{\int\limits_{S_{i,j}}}
@@ -54,6 +55,7 @@
 \newtheorem{thm}{Theorem}
 \newtheorem{lem}[thm]{Lemma}
 \newdefinition{defn}{Definition}
+\newdefinition{rmk}{Remark}
 \newproof{prf}{Proof}
 
 % parentheses
