--- a/doc/paper/content/low.tex
+++ b/doc/paper/content/low.tex
@@ -1,11 +1,5 @@
 % !TEX root = ../paper.tex
 
-\begin{itemize}
-  \item M-matrix
-  \item positivity preservation
-  \item local DMP
-\end{itemize}
-
 The role of a low-order scheme in the context of the FCT algorithm is to
 provide a fail-safe solution, which has desirable properties such as
 positivity-preservation and lack of spurious oscillations. These properties
@@ -80,7 +74,22 @@ diffusion operator $\D^L$, called the low-order diffusion matrix:
 \begin{equation}
   \M^L\ddt{\U^L} + (\A + \D^L)\U(t) = \ssrhs(t) \eqc
 \end{equation}
-where $\U^L(t)$ denotes the discrete low-order solution values. The low-order
+where $\U^L(t)$ denotes the discrete low-order solution values.
+Defining the low-order steady-state system matrix $\A^L\equiv\A + \D^L$,
+the low-order system for the steady-state system, explicit Euler system,
+and theta system, respectively, are
+\begin{equation}\label{eq:low_ss}
+  \A^L \U = \ssrhs \eqc
+\end{equation}
+\begin{equation}\label{eq:low_fe}
+  \M^L\U^{n+1} = \M^L\U^n + \dt\pr{\ssrhs^n - \A^L\U^n} \eqc
+\end{equation}
+\begin{equation}\label{eq:low_theta}
+  \pr{\M^L + \theta\dt\A^L}\U^{n+1} = \M^L\U^n + \dt\pr{\ssrhs^\theta
+    - (1-\theta)\A^L\U^n} \eqc
+\end{equation}
+where $\ssrhs^\theta \equiv (1-\theta)\ssrhs^n + \theta\ssrhs^{n+1}$.
+The low-order
 diffusion matrix is assembled element-wise using the local viscous bilinear
 form and low-order viscosity definitions:
 \begin{equation}\label{eq:low_order_diffusion_matrix}
@@ -91,11 +100,33 @@ form and low-order viscosity definitions:
 
 Now the low-order scheme has been fully described, and some statements will be
 made on its properties. Firstly the M-matrix property will be claimed for
-the matrix $\A^L\equiv\A + \D^L$, which will hereafter be referred to as the
-low-order steady-state system matrix.
+the matrix $\A^L$.
 %-------------------------------------------------------------------------------
 \begin{thm}[M-matrix property]
   The low-order steady-state system matrix $\A^L$ is a non-singular M-matrix.
 \end{thm}
 \input{content/m_matrix}
 %-------------------------------------------------------------------------------
+Thus it has been proven that the system matrix for the low-order steady-state
+system is an M-matrix, and it remains to prove the same for each of the
+transient systems. For the explicit Euler/SSPRK systems, the system matrix
+is just the lumped mass matrix $\M^L$, which is easily shown to be an M-matrix
+since it is a positive, diagonal matrix. For the $\theta$ temporal
+discretization, the system matrix is a linear combination of the lumped mass
+matrix and the low-order steady-state system matrix; this linear combination
+is also an M-matrix since it is a combination of two M-matrices with non-negative
+combination coefficients.
+
+To complete the proof of positivity preservation, it remains to show that
+the system right-hand-side vectors for each temporal discretization are
+non-negative.
+%-------------------------------------------------------------------------------
+\input{content/positivity_preservation}
+%-------------------------------------------------------------------------------
+
+It can also be shown that the described low-order scheme satisfies a local
+discrete maximum principle, which is easily shown given the M-matrix property.
+One may decide to use these bounds as the imposed bounds in the FCT
+algorithm; however, this approach has been found to yield less accurate
+than the approach to be outline in Section \ref{sec:fct} and is thus omitted
+for brevity.
