--- a/doc/paper/shortcuts.tex
+++ b/doc/paper/shortcuts.tex
@@ -38,6 +38,10 @@
 \newcommand{\M}{\mathbf{M}}
 \newcommand{\dt}{\Delta t}
 
+% FCT
+\newcommand{\p}{\mathbf{p}}
+\renewcommand{\P}{\mathbf{P}}
+
 % integrals and sums
 \newcommand{\sumj}{\sum\limits_j}
 \newcommand{\sumjnoti}{\sum\limits_{j\ne i}}
