created python plot scripts and generated some plots for paper

--- a/doc/paper/content/results.tex
+++ b/doc/paper/content/results.tex
@@ -5,3 +5,33 @@
   \item 1-D source-in-void test problem
   \item 1-D interface or three-region test problem
 \end{itemize}
+
+This section presents results for a number of test problems, which compare
+solutions obtained using:
+\begin{itemize}
+  \item the standard Galerkin FEM, titled in plots as ``Galerkin'',
+  \item the low-order method, titled in plots as ``Low'',
+  \item the entropy viscosity method, titled in plots as ``EV'',
+  \item the standard Galerkin FEM with FCT, titled in plots as ``Galerkin-FCT'', and
+  \item the entropy viscosity method with FCT, titled in plots as ``EV-FCT''.
+\end{itemize}
+
+%===============================================================================
+\subsection{Spatial Convergence Results}
+%===============================================================================
+
+%===============================================================================
+\subsection{Void-to-Absorber Test Problem}
+%===============================================================================
+
+%===============================================================================
+\subsection{Obstruction Test Problem}
+%===============================================================================
+
+%===============================================================================
+\subsection{Spatial Convergence Results}
+%===============================================================================
+
+%===============================================================================
+\subsection{Spatial Convergence Results}
+%===============================================================================
